--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,3 +1,67 @@
-<p>
-  profil works!
-</p>
+<app-navbar></app-navbar>
+<header class="card bg-dark text-white ">
+    <img class="w-auto card-img" src="../../assets/ban.jpg" alt="Card image">
+      <div class="card-img-overlay ">
+       <h5 class="card-title">Johne Wick</h5>
+        <img class=" d-block w-auto" src="../../assets/profil2.jpg">
+       <p class="card-text">
+        Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus),<br/>
+        sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus.</p>
+      </div>
+</header>
+<body>
+<div class="card-group">
+  <div class="card">
+    <div class="card-body ">
+      <div class="d-flex justify-content-center">
+        <div class="btn btn-primary">Contact</div>
+      </div>
+        <h6 class="card-title">Adresse</h6>
+       <p class="card-text">2 rue de la ville <br/>
+       75001 Paris</p>
+        <h6 class="card-title">Telephone</h6>
+        <p class="card-text">0601010101</p>
+        <h6 class="card-title">Mail</h6>
+        <p class="card-text">blablabf@fg.com </p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <div class="d-flex justify-content-center">
+       <h5 class="btn btn-primary">Description</h5>
+      </div>
+        <h6 class="card-title  ">Ma vie en 3 mots</h6>
+        <p class="card-text text-center ">Hanc regionem praestitutis celebritati diebus invadere parans dux ante edictus per solitudines Aboraeque amnis herbidas ripas,
+        suorum indicio proditus, qui admissi flbagitii metu exagitati ad praesidia descivere Romana. absque ullo egressus effectu deinde tabescebat immobilis..</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <div class="d-flex justify-content-center">
+      <h5 class="btn btn-primary">Photo</h5>
+       </div>
+        <div id="carouselExampleControls" class="carousel slide w-75 container-fluid" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class=" carousel-item active">
+             <img class="w-100" src="../../assets/profil.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-100" src="../../assets/profil2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-100" src="../../assets/profil3.jpg" alt="Third slide">
+            </div>
+          </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+             <span class="sr-only">Next</span>
+            </a>
+         </div>
+     </div>
+   </div>
+  </div>
+</body>
