--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,13 @@
 <app-navbar></app-navbar>
 
-home page works !
+<img class="card-img img-fluid" src="../../assets/home.jpg" alt="Card image">
+<div class="card-img-overlay ">
+<div class=" position-relative overflow-hidden p-5 p-md-5 m-md-5 text-center text-white">
+  <div class="col-md-5 p-lg-5 mx-auto my-5">
+    <h1 class="display-4 ">Home Page</h1>
+    <p class="lead ">le site du projet pas definis mais la page home est la pour faire jolie </p>
+    <a class="btn btn-primary" routerLink="/login" routerLinkActive="active">Connectez vous</a>
+  </div>
+</div>
+</div>
+
