--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <header class="card bg-dark text-white ">
-    <img class="w-auto card-img" src="../../assets/ban.jpg" alt="Card image">
+    <img class="w-auto card-img" src="../../assets/ban2.png" alt="Card image">
       <div class="card-img-overlay ">
-       <h5 class="card-title">Johne Wick</h5>
+       <h5 class="card-title">Tim Wolf</h5>
         <img class=" d-block w-auto" src="../../assets/profil2.jpg">
        <p class="card-text">
         Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus),<br/>
@@ -10,7 +10,7 @@
       </div>
 </header>
 <body>
-<div class="card-group">
+<div class="card-group  ">
   <div class="card">
     <div class="card-body ">
       <div class="d-flex justify-content-center">
